@@ -511,6 +511,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p>Added jumplist feature #553 (<code>previousScrollPosition</code> is <code>&lt;C-o&gt;</code> and <code>nextScrollPosition</code> is <code>&lt;C-i&gt;</code>).</p>
 </li>
+<li>
+<p>Fixed toggling bookmarks saving url as title and added <code>toggleWindowBookmarks</code> as a fixup for already saved bookmarks.
+load all bookmarks in a window and use the command</p>
+</li>
 </ol>
 </div>
 </div>
